--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
   doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
-  abbr={AJP}
+  abbr={AJP},
+  selected={true}
 }
 
 @article{choi2025college,
@@ -107,7 +108,9 @@
   abstract={As part of a larger project, this paper reports on preliminary findings of a study exploring use cases of ChatGPT and associated behaviors and experiences among users of an online forum. Posts on a ChatGPT-related forum on Reddit (n = 452) were analyzed using qualitative content analysis. This paper reports on themes relevant to this study, including the types of tasks for which users used ChatGPT, user experiences, and perceived impacts of ChatGPT. ChatGPT was often used to facilitate various writing tasks (e.g., writing an essay), academic tasks (e.g., finding scientific references for a research paper), everyday tasks (e.g., creating a meal plan), and conversational purposes (e.g., having a simulated conversation about a past event). Users expressed positive (e.g., excited, amazed) and negative (e.g., fooled, concerned) feelings toward the technology. They raised various issues and problems with ChatGPT at the content (e.g., inaccuracy, incompletes) and system (e.g., unavailability, instability) levels. Users discussed the perceived impacts of ChatGPT on individuals (e.g., unemployment) and society (e.g., AI divide). Study findings can inform the design of policies and guidelines for mitigating AI problems and promoting the effective and ethical use of emerging AI technologies.},
   doi={https://doi.org/10.1002/pra2.823},
   pdf={2023-ASIST-ShortPaper.pdf},
-  slides={2023-ASIST-ShortPaper-Slides.pdf}
+  slides={2023-ASIST-ShortPaper-Slides.pdf},
+  abbr={ConfProc},
+  selected={true}
 }
 
 @article{choi2023preliminary,
@@ -120,8 +123,8 @@
   year={2023},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   doi={https://doi.org/10.1002/pra2.901},
-  pdf={2023-ASIST-Abstract},
-  poster={2023-ASIST-Poster}
+  pdf={2023-ASIST-Abstract.pdf},
+  poster={2023-ASIST-Poster.pdf}
 }
 
 @article{choi2022design,
