--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
   doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
-  abbr={AJP},
+  abbr={Journal},
   selected={true}
 }
 
