--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
   selected={true}
 }
 
-@inproceedings{an2024college,
+@article{an2024college,
   title={College students' metaphors for ChatGPT: An exploratory study},
   author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
   booktitle={Proceedings of the Association for Information Science and Technology},
