--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
 @article{an2024college,
   title={College students' metaphors for ChatGPT: An exploratory study},
   author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
-  booktitle={Proceedings of the Association for Information Science and Technology},
+  journal={Proceedings of the Association for Information Science and Technology},
   volume={61},
   number={1},
   pages={846--848},
