--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,7 +79,7 @@
   publisher={Pergamon},
   abstract={Social question-and-answer (Q&A) sites have the potential to serve as a useful source of online information based on their content-focused and collaborative nature. Although previous research has examined various attributes of high-quality information on social Q&A sites (e.g., best answers), relatively less attention has been paid to what affects users’ credibility assessments of information in the social Q&A context. The present study developed a social Q&A platform-specific framework for web credibility assessment, including 21 criteria under six types of web credibility, based on a literature analysis and case study of two online Q&A communities, Stack Exchange and Wikipedia Reference Desk. Using the selected sites’ policies and guidelines (n = 46) as the source of evidence, the case study revealed that content-related attributes (e.g., evidence-based, pertinence) were most frequently identified (12 of 21 criteria) as potential cues and heuristics for web credibility assessments of social Q&A sites, followed by author-related (five of 21; e.g., reputation) and design-related (four of 21; e.g., engaging design) factors. Design-related criteria were rarely included in previous models of web credibility on social Q&A or similar peer-knowledge production platforms. However, our findings showing that both Stack Exchange and Wikipedia Reference Desk have policies regarding all four design-related criteria in our framework—engaging design, moderation, design appropriateness, and ease of use—indicate the potential influences of design features on users’ web credibility assessment on social Q&A sites. Some differences emerged between the two cases, such as policies regarding the answerer's credentials or semantic accuracy that are present on Wikipedia Reference Desk but absent on Stack Exchange. Such differences in the sites’ policies reflect how they position themselves as social Q&A communities—Wikipedia, of which Wikipedia Reference Desk is a part, as an encyclopedia, and Stack Exchange as a community-based platform for learning, sharing knowledge, and building careers of users.},
   doi={https://doi.org/10.1016/j.ipm.2023.103321},
-  pdf={2023-IPM.pdf},
+  pdf={2023-IPM.pdf}
 }
 
 @article{zheng2023exploration,
