--- a/_news/2024-10-28.md
+++ b/_news/2024-10-28.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Recognized as a Distinguished Member of ASIS&T.
+title: Recognized as a Distinguished Member of ASIS&T
 date: 2025-04-16
 inline: false
 related_posts: false
