--- a/_news/2025-04-16.md
+++ b/_news/2025-04-16.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Top 10% of most-viewed papers 
+title: Ranked among the top 10% of most-viewed papers in 2023
 date: 2025-04-16
 inline: false
 related_posts: false
