--- a/_news/2024-10-28.md
+++ b/_news/2024-10-28.md
@@ -6,7 +6,8 @@ inline: false
 related_posts: false
 ---
 
-I am so honored to be recognized as a Distinguished Member of ASIS&T at the 2024 Annual Meeting in Calgary, Canada!
+I am truely honored and greatful to be named a Distinguished Member of ASIS&T at the 2024 Annual Meeting in Calgary, Canada!
 
-
-![ASIST'24 Distinguished Member](/assets/img/2024-ASIST-DistMem.jpg)
+<div style="text-align: center;">
+  <img src="/assets/img/2024-ASIST-DistMem.jpg" alt="ASIST'24 Distinguished Member" style="max-width: 100%; height: auto;" />
+</div>
