--- a/_news/2025-04-16.md
+++ b/_news/2025-04-16.md
@@ -9,4 +9,7 @@ related_posts: false
 Our paper, “[Exploring Applications and User Experience with Generative AI Tools: A Content Analysis of Reddit Posts on ChatGPT](/assets/pdf/2023-ASIST-ShortPaper.pdf),” published in the <i>Proceedings of the Association for Information Science and Technology</i>, ranked among the top 10% of most-viewed papers in 2023.
 
 
-![certificate](/assets/img/ASIST-Top10.jpg)
+<div style="text-align: center;">
+  <img src="/assets/img/ASIST-Top10.jpg" alt="ASIST'24 Distinguished Member" style="max-width: 100%; height: auto;" />
+</div>
+
