--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,6 +118,7 @@
   pages={929--931},
   year={2023},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={This poster introduces an ongoing project to develop a scale for measuring information credibility on current and newly emerging interactive web platforms. The poster reports on preliminary findings from an initial phase in the project to generate an item pool based on an analysis of existing scales for credibility (n = 3) and empirical studies in the library and information science literature on web credibility assessments in the social media context (n = 19). Results show that in most papers analyzed (16 of 19; 84.2%), credibility was conceptualized as a one‐dimensional construct and often measured with only one item (e.g., credible, believable), despite the common view among scholars that credibility is a high‐level, multifaceted concept. The analysis also identified 59 semantically distinct items as an initial pool, which will be validated and tested with empirical data in subsequent project phases.},
   doi={https://doi.org/10.1002/pra2.901},
   pdf={2023-ASIST-Abstract.pdf},
   poster={2023-ASIST-Poster.pdf}
@@ -130,7 +131,10 @@
   volume={19},
   number={3},
   pages={119--138},
-  year={2022}
+  year={2022},
+  doi={https://doi.org/10.20879/acr.2022.19.3.119},
+  abstract={This study explored what makes users perceive a website as a credible source of health information and how web credibility assessment, in turn, influences their health information-seeking behaviors. Exploratory factor analysis was conducted with survey responses from college students (NN = 141) who assessed credibility markers of a website they normally visit to address health concerns. A 4-factor solution emerged as the best summary of the data: (a) content, (b) interaction design, (c) information design, and (d) source. Identified components were used in a linear model to explore the effects of different web credibility types on perceptual, attitudinal, and behavioral outcomes. Alongside content-related attributes (e.g., recency of the information), interaction design-related elements (e.g., ability to interact with other users) were significantly associated with most dependent variables examined in the study (e.g., trust in the information on the site, willingness to follow the advice, and willingness to recommend the site to others). Current results imply that users count on not only content-related cues or heuristics, but also interactive design features as helpful tools for mobilizing social resources (e.g., fellow users) to validate online health information. Theoretical and practical implications of the study findings and future research directions are discussed.},
+  pdf={2022-ACR.pdf}
 }
 
 @article{choi2022associations,
@@ -170,7 +174,12 @@
   title={Developing a theoretical framework for web credibility assessment—A case of social Q\&A sites: preliminary findings},
   author={Choi, Wonchan and Stvilia, Besiki},
   year={2022},
-  publisher={iSchools}
+  publisher={iSchools},
+  abstract={As part of a larger study, this poster reports on preliminary findings of efforts to develop a theoretical framework for assessing the credibility of information on social question-and-answer (Q&A) sites. A literature analysis was conducted to identify relevant criteria for assessing web credibility on social Q&A sites, which were then mapped to an existing framework of web credibility assessment [1]. Specifically, 21 criteria identified by the literature analysis were categorized into one of six types of web credibility assessments—operator (author) trustworthiness, operator (author) expertise, con-tent trustworthiness, content expertise, design trustworthiness, and design expertise—to develop an information platform type-specific framework of in-formation credibility. Results show that existing criteria used in the literature have focused primarily on content-related attributes (eg, evidence-based, structural completeness, and semantic clarity and comprehensive-ness), but less on operator (author)-related attributes (eg, credentials) or de-sign features (eg, interactive design, appropriateness of design, ease of use). Implications of the findings and future research directions are discussed.},
+  html={https://www.ideals.illinois.edu/items/123089},
+  pdf={2022-iConf-Abstract},
+  poster={2022-iConf-poster},
+  video={https://drive.google.com/file/d/1eEhqiOi3d_I32uTkx8DWrYtmA_uJ6jIN/view?usp=drive_link}
 }
 
 @article{wang2021feature,
