--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -177,8 +177,8 @@
   publisher={iSchools},
   abstract={As part of a larger study, this poster reports on preliminary findings of efforts to develop a theoretical framework for assessing the credibility of information on social question-and-answer (Q&A) sites. A literature analysis was conducted to identify relevant criteria for assessing web credibility on social Q&A sites, which were then mapped to an existing framework of web credibility assessment [1]. Specifically, 21 criteria identified by the literature analysis were categorized into one of six types of web credibility assessments—operator (author) trustworthiness, operator (author) expertise, con-tent trustworthiness, content expertise, design trustworthiness, and design expertise—to develop an information platform type-specific framework of in-formation credibility. Results show that existing criteria used in the literature have focused primarily on content-related attributes (eg, evidence-based, structural completeness, and semantic clarity and comprehensive-ness), but less on operator (author)-related attributes (eg, credentials) or de-sign features (eg, interactive design, appropriateness of design, ease of use). Implications of the findings and future research directions are discussed.},
   html={https://www.ideals.illinois.edu/items/123089},
-  pdf={2022-iConf-Abstract},
-  poster={2022-iConf-poster},
+  pdf={2022-iConf-Abstract.pdf},
+  poster={2022-iConf-poster.pdf},
   video={https://drive.google.com/file/d/1eEhqiOi3d_I32uTkx8DWrYtmA_uJ6jIN/view?usp=drive_link}
 }
 
