--- a/_news/2024-06-18.md
+++ b/_news/2024-06-18.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Promotion to the rank of Associate Professor with Tenure. The new rank effective August 19, 2024, the start of the 2024-2025 academic year.
+Promoted to Associate Professor with tenure (effective August 19, 2024)
