--- a/_news/2024-06-18.md
+++ b/_news/2024-06-18.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Promoted to Associate Professor with tenure (effective August 19, 2024)
+Promoted to Associate Professor with tenure
