--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -146,7 +146,10 @@
   number={3},
   pages={393--406},
   year={2022},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/asi.24556},
+  abstract={Given the aging world, it is important to understand older adults' everyday life information seeking (ELIS), which plays a vital role in healthy aging in later life. The present study analyzed national survey data collected by the Pew Research Center in 2016 based on Savolainen's ELIS model. The model's core concept, mastery of life, was measured in terms of general coping style to find information (cognitive vs. affective) and expectations about the findability of necessary information (optimistic vs. pessimistic). Weighted multiregression analyses were conducted to examine the associations between mastery of life and ELIS behavior of older Americans (65 years or older) in terms of breath and depth of interest in everyday topics, holding other sociocultural and demographic factors constant. The results showed a cognitive, as opposed to affective, coping style was associated with a wider range of ELIS topics and a deeper level of interest in political and cultural topics. However, whether an individual had an optimistic or pessimistic perspective toward information seeking was not associated with the variety or depth of interest in everyday topics. Neither dimension was related to the depth of interest in sports topics. Practical, theoretical, and methodological implications of the findings are provided.},
+  pdf={2022-JASIST.pdf}
 }
 
 @article{park2022understanding,
@@ -157,7 +160,9 @@
   number={1},
   pages={1--18},
   year={2022},
-  publisher={元智大學老人福祉科技研究中心}
+  doi={https://doi.org/10.4017/gt.2022.21.1.798.12},
+  abstract={Background: As our society gets older, the implications of information and communication technologies (ICT)-based healthcare have increased. Although the adoption of ICTs has dramatically changed the landscape of the health sector since the early 1950s, the benefits that ICTs could bring to dementia care have been relatively unexplored. Objective: This paper mined the research articles for insights into how relationships between ICTs and assistive technologies (ATs) in dementia care have been developed historically and should be cultivated in the future. Method: Using text-mining techniques, 2,030 journal articles regarding ATs in relation to ICTs in dementia care published from 1970 to 2020 were analyzed. The literature was retrieved from the Web of Science, PubMed, PsycINFO, and IEEE Xplore digital library. Results: Despite the active integration of ICTs in many other sectors, the literature demonstrated that research regarding ICT integration in ATs for dementia interventions occurred only after the 1990s. The analysis results also indicate that studies have moved toward supporting the aging-in-place of people with dementia, encompassing major research interests such as assisting with daily activities of living, modifying the home, and promoting recreational activities. A research gap was also identified in technology adoption to support the social interactions of those with dementia, which is a key part of enhancing the quality of life. Conclusion: The research that addressed ICT integration with ATs for dementia care has been evolving and moving from issues of safety and security to maintaining autonomy of people with dementia in their own place.},
+  pdf={2022-Geron.pdf}
 }
 
 @article{lee2022respite,
@@ -168,7 +173,9 @@
   number={6},
   pages={1557--1567},
   year={2022},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  publisher={SAGE Publications Sage CA: Los Angeles, CA},
+  doi={https://doi.org/10.1177/07334648221075620},
+  abstract={This study examined factors related to respite service use among caregivers and further tested the moderating effect of dementia caregiver status in these relationships using nationally representative U.S. data. Logistic regression analyses were conducted among 1203 caregivers (276 dementia and 927 nondementia caregivers). Caregivers’ race and ethnicity as a predisposing factor, caregivers’ self-rated health as an enabling factor, and care recipients’ living arrangement and functional limitations as need factors were significantly related to respite service use. Moreover, dementia caregiver status moderated the association between enabling factors (i.e., household income, work status, and self-rated health) and respite service use. Our findings imply that dementia caregivers may be more in need of respite service use than nondementia caregivers when they have limited enabling factors (e.g., lower household income, nonworking status, poorer health). Policy and practice efforts that specifically support enabling factors are suggested to promote more respite service use among dementia caregivers.}
 }
 
 @article{choi2022developing,
@@ -190,17 +197,9 @@
   volume={156},
   pages={104598},
   year={2021},
-  publisher={Elsevier}
-}
-
-@article{lee2021respite,
-  title={Respite Service Use among Dementia and Nondementia Caregivers: Findings from the Caregiving in the US 2015 Survey},
-  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
-  journal={Innovation in Aging},
-  volume={5},
-  number={Suppl 1},
-  pages={958},
-  year={2021}
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.ijmedinf.2021.104598},
+  abstract={Background and objective: Diabetes and hypertension are two prevalent and related chronic conditions. To inform the design and development of mobile health applications (mHealth apps) for people living with multiple chronic conditions, this paper examines features mentioned in developers’ descriptions and user reviews of mHealth apps, along with users’ attitudes toward associated features. Materials and methods: Eleven top apps for diabetes and hypertension were identified from Google Play as of January 2020. Based on a stratified sampling strategy, 1,100 user reviews were selected to form the final dataset. Developers’ descriptions were also collected for analysis. Using the grounded theory approach, we developed a feature-oriented coding scheme, which was used to identify three levels of features mentioned in app descriptions and user reviews: feature group (the highest level), feature type (the second level), and individual feature (the lowest level). Users’ attitudes toward app features mentioned in user reviews were also analyzed. Results: Most top-rated apps for diabetes and hypertension under study were multifeatured, incorporating self-management, information sharing, and decision support features. At the feature-group level, most informative user reviews commented on features related to self-management, followed by decision support and information sharing. The four most frequently mentioned feature types were data entry, data export/import, data visualization, and assessment. Users expressed overwhelming positive attitudes toward app features across all feature categories. Based on users’ assessments of existing features and requests for additional features, design implications for app development are provided. Conclusions: Despite the diversity of app features provided by mHealth apps and users’ primarily positive attitudes toward existing app features, more comprehensive and personalized features are expected by app users to satisfy their health needs. Beyond identifying app features in user reviews, future research may seek more in-depth feedback from real-life patients for app development and design using methods like interviews and focus groups, to further enhance the overall quality of relevant mHealth apps to better support users.}
 }
 
 @article{choi2020validating,
@@ -211,7 +210,10 @@
   number={1},
   pages={e357},
   year={2020},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/pra2.357},
+  abstract={This methodology poster introduces an ongoing study seeking to validate an extended typology of web credibility assessments proposed by Choi and Stvilia (2015) using online surveys. The study focuses on health-related topics as an important subject domain for web credibility assessments. The poster describes the study's theoretical background and methodology, especially the process of developing and testing the online survey questionnaire, which consists of 89 questions in five sections: internet use and experience, health information seeking, web credibility assessment, outcomes of web credibility assessment, and demographic factors. A pretest of the online survey questionnaire was conducted with eight doctoral students, in which each participant answered the questions and provided feedback on the survey design. Pretest results and future research directions are discussed.},
+  pdf={2020-ASIST-Poster.pdf}
 }
 
 @article{choi2020older,
@@ -219,7 +221,10 @@
   author={Choi, Wonchan},
   journal={Journal of the Association for Information Science and Technology},
   year={2020},
-  publisher={WILEY}
+  publisher={WILEY},
+  doi={https://doi.org/10.1002/asi.24341},
+  abstract={Credibility assessment is a crucial component in the process of peopleʼs health information seeking, especially in the web context. Finding “credible” health information from a plethora of information on the web may be more challenging for older adults, who have relatively less experience with the Internet. This article reports on the findings of an exploratory study of older adultsʼ credibility assessments of online health information. The data collected through semistructured interviews with 21 older adult Internet users in the United States were analyzed based on the extended typology of web credibility (Choi & Stvilia, 2015, Journal of the Association for Information Science and Technology, 66, 2399–2414). The findings of the study revealed that older adults paid closer attention to operator-related credibility cues and heuristics when judging the credibility of health information on the web, followed by content- and design-related ones. Also, the findings suggest that participants who were younger and used the Internet more frequently employed a wider variety of cues and heuristics to evaluate the credibility of online health information. Based on these findings, both theoretical and practical implications of the research and future research directions are discussed.},
+  pdf={2020-JASIST.pdf}
 }
 
 @article{choi2020systematic,
@@ -230,7 +235,10 @@
   number={6},
   pages={939--945},
   year={2020},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={https://doi.org/10.1093/jamia/ocaa029},
+  abstract={Objective: This article reports results from a systematic literature review of the current state of mobile health (mHealth) technologies that have the potential to support self-management for people with diabetes and hypertension. The review aims to (a) characterize mHealth technologies used or described in the mHealth literature and (b) summarize their effects on self-management for people with diabetes and hypertension from the clinical and technical standpoints. Materials and Methods: A systematic literature review was conducted following PRISMA guidelines. Online databases were searched in September 2018 to identify eligible studies for review that had been published since 2007, the start of the smartphone era. Data were extracted from included studies based on the PICOS framework. Results: Of the 11 studies included for in-depth review, 5 were clinical research examining patient health outcomes and 6 were technology-focused studies examining users’ experiences with mHealth technologies under development. The most frequently used mHealth technology features involved self-management support (n = 11) followed by decision support (n = 6) and shared decision-making (n = 6). Most clinical studies reported benefits associated with mHealth interventions. These included reported improvements in objectively measured patient health outcomes (n = 3) and perceptual or behavioral outcomes (n = 4). Discussion: Although most studies reported promising results in terms of the effects of mHealth interventions on patient health outcomes and experience, the strength of evidence was limited by the study designs. Conclusion: More randomized clinical trials are needed to examine the promise and limitations of mHealth technologies as assistive tools to facilitate the self-management of highly prevalent comorbidity of chronic conditions, such as diabetes and hypertension.},
+  pdf={2020-JAMIA.pdf}
 }
 
 @article{oh2019challenges,
@@ -241,7 +249,10 @@
   number={Supplement\_1},
   pages={S316--S317},
   year={2019},
-  publisher={Oxford University Press US}
+  publisher={Oxford University Press US},
+  doi={https://doi.org/10.1093/geroni/igab046.3428},
+  abstract={The World Population Prospects 2019 reports that the proportion of people who aged 65 and above takes up 9 per cent globally in 2019, reaching up to 16 per cent by 2050. Asia has the fastest rise: from 1 in 9 people aged 65 and above to 1 in 4 in 2050. Rapid growth in older adults has strong implications for diseases and healthcare expenditure. For Singapore, the transition from ‘ageing society’ (7% seniors) in 1999 to ‘super-aged society’ (20% seniors) in 2026 is projected to take 27 years, much faster than Japan’s 36 years. We used the Singapore Multi-Ethnic Cohort (MEC) of 14,465 subjects aged 21 to 94, and the Future Elderly Model (FEM) microsimulation model to project disease burden and hospitalization expenditures to 2050. We found that Chinese females had the highest life expectancy of 86.0 years, followed by Indian and Malay females with 80.4 and 75.6 years respectively. In all racial groups, women lived longer than men by 5-7 years. Cumulative hospitalization expenditures of older adults aged 51+ was US$69,500 for Chinese, US$67,600 for Malays and US$86,100 for Indians; US$71,200 for males and US$70,700 for females. The increased hospitalization spending for all three ethnic groups was due to the underlying manifestation of chronic diseases, including diabetes, hypertension, heart disease and stroke. Variations in environmental risk factors such as diet, cigarette smoking and physical activity across ethnic groups may contribute to racial differences in chronic diseases and disability. Therefore, targeted interventions are needed to reduce racial disparities.},
+  pdf={https://watermark.silverchair.com/igab046.3428.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAA5owggOWBgkqhkiG9w0BBwagggOHMIIDgwIBADCCA3wGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMPnwYiKlGmObDtwvaAgEQgIIDTXLWVjEgAgLW6rgdFT58LdnYOs4XtYlEfb4b3ri274_R623ie8dLfI0OHYB-gGbKG6Aadtte7m_qpGYkW0Z829OceRJZfI4jwS8prhX53Sh4YLKeoki-iGYNak38DxFIBAM_TQuQfmfsAR0NVs2XrBcWWXwP4EiLa1v1B2VOLUiBoSWpDs-4YNzGXVa_R5YTZ3BDdTA_jD2WcUfYlKz9qAzC0jGsB6Y8cgLeaErJFTeyS3RnACjYA09ArbN-6rIYcNFmo6GUld779kZ1dnCFAvTsXOrmhakSJTusr_5QS-CCaG07cCEUak_1hDC0ZjFzEVPRHSvKD4r0jehu5XjHNagj1rvgdUp1NayrLwGyYRPRQdqs9wJRsHXvIn6b-J7jzMf_PDp6bNDGW-WWsB3qB9ev0MXHEcSFCh4QAmhd6XGtSYUmu24ZXZWq4zGPcqMIOCaBwVJWKRPJUpnzi9fihaQRWIYC3LCGzmN1AeGIljYRenlygOdlumzC6qwskxwEd5b_IfVNG_sG_3N4ylnOrE0MZR1PwD3VXrdkRBM4Ui8jhQJXoMewel9tosX3KOKd18rGU5rtCJ79KFMjZiI8X9BkqpRLT0z0sqwHm5wALg-xvCPJzwJ2tbGfNWakzlh-MqgkvE8UfDnEDPPkwh1Pj29Zw8SubsgP1NbBYHhowIB2mvXJhIQW3bCQ1hVp4iExTsLGTolMMwVCgRoUZwMDC9H1iqBxyY_Z9nnpBjfU8MdAE-9qfAQqFAISDVQj2bS1R8cEuLBftQRzYbXGkwVci24JFtkGBsvtWwNiGDPKuu4qj395qnvJn_MzdD67OuXwDZ5nD7e6YOJnGZDwlb-4QF-r4A838rhKyBeAfmGAL3Zk97VuUkQsuL-PerxQcXAW-aAU4gXOyMxQ08cszEsQdJKe-6DQISmPzwF74DYHl10cgkWxdQgpoiLJe66mlPYqKOQtI7LoG8RkecoeYnu0bcNjj13-GvucUmSNKSXTyDibj_FpfU7Qk_gJIw5ZKGDeZBVgFr2l-xSZuOfaeZ9BtPLnDqjS6kQhShL8A5VKqxrxvx7I4wY4CDdoMO1ZG5aBJz4I7Q5SdDTevA9w-0gVH89P0Ld2jf1pIC48i8Zg}
 }
 
 @article{choi2019mhealth,
@@ -252,7 +263,10 @@
   number={3},
   pages={984--1003},
   year={2019},
-  publisher={SAGE Publications}
+  publisher={SAGE Publications},
+  doi={https://doi.org/10.1177/1460458217735676},
+  abstract={Osteoarthritis is a common chronic disease that can be better treated with the help of self-management interventions. Mobile health (mHealth) technologies are becoming a popular means to deliver such interventions. We reviewed the current state of research and development of mHealth technologies for osteoarthritis self-management to determine gaps future research could address. We conducted a systematic review of English articles and a survey of apps available in the marketplace as of 2016. Among 117 unique articles identified, 25 articles that met our inclusion criteria were reviewed in-depth. The app search identified 23 relevant apps for osteoarthritis self-management. Through the synthesis of three research themes (osteoarthritis assessment tools, osteoarthritis measurement tools, and osteoarthritis motion monitoring tools) that emerged from the current knowledge base, we provide a design framework to guide the development of more comprehensive osteoarthritis mHealth apps that facilitate self-management, decision support, and shared decision-making.},
+  pdf={2019-HIJ.pdf}
 }
 
 @article{wang2019assessing,
@@ -263,7 +277,10 @@
   number={1},
   pages={790--791},
   year={2019},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/pra2.178},
+  abstract={With advances in mobile health (mHealth) technology and growing ownership of smartphones, mHealth applications have great potential to support patients' self-management of chronic diseases such as diabetes and hypertension. Informative consumer reviews on app stores (e.g., Google Play) are a useful source of information for app developers to understand users' needs and for users to select a pertinent app over similar alternatives. This poster reports preliminary findings of a study that explores factors affecting the informativeness of consumer reviews using a feature-centered rating scale. The results show that consumer ratings and the length of consumer reviews are both correlated with informativeness. These findings will contribute to filtering informative reviews for future in-depth analyses of app features.},
+  pdf={https://asistdl.onlinelibrary.wiley.com/doi/epdf/10.1002/pra2.178}
 }
 
 @article{choi2019analyzing,
@@ -274,7 +291,11 @@
   number={1},
   pages={627--628},
   year={2019},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/pra2.112},
+  abstract={In this work in progress, we explore methods employed by professional journalists to fact-check political claims and debunk inaccurate (“fake”) news stories. We content-analyzed 150 articles evaluating political claims and debunking fake news published by two media companies, the Washington Post (United States) and JTBC (South Korea), during the periods surrounding the recent presidential elections in their respective countries. Overall, the most common types of claims evaluated included false claims made by politicians or political groups about their opponents' positions and numerical and nonnumerical facts. The most frequently used methods for debunking such false claims included consulting with an independent expert in the given topic domain and checking government statistics or documents. There were some variations in the types of false claims focused and debunking methods used between the two fact-checking organizations.},
+  pdf={2019-ASIST-Abstract.pdf},
+  poster={2019-ASIST-Poster.pdf}
 }
 
 @article{choi2019older,
@@ -285,11 +306,14 @@
   number={4},
   pages={100983},
   year={2019},
-  publisher={JAI}
+  publisher={JAI},
+  doi={https://doi.org/10.1016/j.lisr.2019.100983},
+  abstract={Health information seeking is an important part of older adults' everyday lives as they cope with their health conditions. Semi-structured interviews conducted with 21 older adults in the United States were analyzed using Savolainen's everyday life information seeking (ELIS) model, especially its key concepts such as way of life and mastery of life. The interview data revealed that except for health care providers, a spouse or partner was mentioned as a credible interpersonal source of health information among older adults in a marital or romantic relationship. Characteristics of older adults' health information behavior in the ELIS context were identified based on types of way of life and mastery of life. For example, those who had more varied types of hobbies, including cognitive, affective, and social hobbies, were exposed to diverse people as they performed their daily routine, potentially resulting in different sources of useful health information. In couple relationships, those with an optimistic as opposed to pessimistic attitude toward a problem-solving situation played the information provider role rather than information receiver role.},
+  pdf={2019-LISR.pdf}
 }
 
-@inproceedings{tulu2017framework,
-  title={A Framework to Design Mhealth Apps for Supporting Self-Management of Chronic Disease},
+@article{tulu2017framework,
+  title={A framework to design mHealth apps for supporting self-management of chronic disease},
   author={Tulu, Bengisu and Choi, Wonchan and Zheng, Hua and Franklin, Patricia},
   booktitle={2017 Annual Research Meeting},
   year={2017},
@@ -297,7 +321,7 @@
 }
 
 @article{choi2017effects,
-  title={Effects of User Interface Design and Task Complexity Level on User Experience in an mHealth Application},
+  title={Effects of user interface design and task complexity level on user experience in an mHealth application},
   author={Choi, Wonchan and Tulu, Bengisu},
   year={2017}
 }
@@ -305,7 +329,11 @@
 @article{choi2017effective,
   title={Effective use of user interface and user experience in an mHealth application},
   author={Choi, Wonchan and Tulu, Bengisu},
-  year={2017}
+  year={2017},
+  doi={https://aisel.aisnet.org/hicss-50/hc/user_experience_in_health_it/3/},
+  abstract={The effect of user interface (UI) design decisions on system usability has been discussed in information system literature. These discussions evolved into investigating the effectiveness of UI and how it affects a system user’s performance, as well as his or her perception of the system as a whole. This paper investigates the role of UI design on facilitating effective use in the context of mobile applications. Based on the Effective Use Theory, we test four different UIs developed for frequent data input tasks in a mobile platform using a controlled experiment and a follow-up survey. Our findings indicate that UI design in terms of touch technique (tap vs. slide) and target direction (vertical vs. horizontal) has a significant impact on the task completion time, as well as the app UIs’ perceived usability and likability. We discuss both theoretical and empirical implications of the results and suggest future research directions.},
+  pdf={2017-HICSS-Paper.pdf},
+  slides={2017-HICSS-Slides.pdf}
 }
 
 @article{zheng2017using,
@@ -344,7 +372,7 @@
 @article{choi2015new-a,
   title={A new framework for Web credibility assessment},
   author={Choi, Wonchan and Stvilia, Besiki},
-  journal={IConference 2015 Proceedings},
+  journal={iConference 2015 Proceedings},
   year={2015},
   publisher={iSchools}
 }
@@ -357,7 +385,10 @@
   number={3},
   pages={201--208},
   year={2015},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.lisr.2015.04.007},
+  abstract={This research explored the mobile wellness application-seeking behavior of college students. In particular, it examined what sources students used to obtain wellness information, what wellness applications students used and for what purposes, how they learned about those applications, and what factors influenced their decision to choose a particular wellness application from multiple alternatives. The results indicated that students most often used websites as sources of wellness information, followed by mobile applications, family and friends, and then physicians. Students most often learned about wellness applications from search engines and application stores. Physicians were the least mentioned source of learning about mobile wellness applications. The most popular application type was calorie and activity trackers. In addition, when asked to rate the importance of various mobile application characteristics in their decision to select a particular wellness application, students rated usability-related characteristics the highest, followed by application cost and content quality. This study contributes to current research and practice in mobile wellness application design and the provision of mobile wellness services. In particular, it can inform application designers and intermediaries about which mobile wellness applications students use, and how students search for and select those applications.},
+  pdf={2015-LISR.pdf}
 }
 
 @article{choi2015web,
@@ -367,7 +398,10 @@
   volume={66},
   number={12},
   pages={2399--2414},
-  year={2015}
+  year={2015},
+  doi={https://doi.org/10.1002/asi.23543},
+  abstract={This article reviews theoretical and empirical studies on information credibility, with particular questions as to how scholars have conceptualized credibility, which is known as a multifaceted concept with underlying dimensions; how credibility has been operationalized and measured in empirical studies, especially in the web context; what are the important user characteristics that contribute to the variability of web credibility assessment; and how the process of web credibility assessment has been theorized. An agenda for future research on information credibility is also discussed.},
+  pdf={2015-JASIST.pdf}
 }
 
 @article{choi2015new-b,
