--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@
 }
 
 @article{xie2024help,
-  title={Help-Seeking Situations Related to Visual Interactions on Mobile Platforms and Recommended Designs for Blind and Visually Impaired Users},
+  title={Help-seeking situations related to visual interactions on mobile platforms and recommended designs for blind and visually impaired users},
   author={Xie, Iris and Choi, Wonchan and Wang, Shengang and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Ning-Chiao and Cudjoe, Emmanuel Kwame},
   journal={Journal of Imaging},
   volume={10},
@@ -53,7 +53,7 @@
 }
 
 @article{choi2024reflective,
-  title={Reflective and Formative Indicators of Information Credibility on Social Media},
+  title={Reflective and formative indicators of information credibility on social media},
   author={Choi, Wonchan and Zhu, Liya and Lee, Hyun Seung},
   journal={Proceedings of the Association for Information Science and Technology},
   volume={61},
@@ -62,7 +62,9 @@
   year={2024},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={As part of a larger project to develop a scale for measuring web credibility perceptions, this poster reports on preliminary findings of a literature analysis to identify reflective and formative indicators of information credibility on social media. Of 90 papers found by a systematic database search and screening, this poster examines 20 papers focused on information credibility on microblogs (e.g., Twitter, Weibo) as a popular source for online users' information seeking. Our analysis identified 22 reflective indicators (e.g., fair, accurate) and 31 formative indicators (e.g., reputable, attractive), eight (e.g., trustworthy, unbiased) of which overlapped. Given the intertwined, often blurred border between these two sets of items, the coding scheme developed in the present study can help determine the relevance and type of the items. Future research directions are discussed.},
-  doi={https://doi.org/10.1002/pra2.1125}
+  doi={https://doi.org/10.1002/pra2.1125},
+  pdf={2024-ASIST-Abstract2.pdf},
+  poster={2024-ASIST-Poster2.pdf}
 }
 
 @article{choi2023developing,
