--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -184,11 +184,11 @@
   title={Developing a theoretical framework for web credibility assessment—A case of social Q\&A sites: preliminary findings},
   author={Choi, Wonchan and Stvilia, Besiki},
   year={2022},
-  publisher={iSchools},
+  journal={iConference Proceedings},
   abstract={As part of a larger study, this poster reports on preliminary findings of efforts to develop a theoretical framework for assessing the credibility of information on social question-and-answer (Q&A) sites. A literature analysis was conducted to identify relevant criteria for assessing web credibility on social Q&A sites, which were then mapped to an existing framework of web credibility assessment [1]. Specifically, 21 criteria identified by the literature analysis were categorized into one of six types of web credibility assessments—operator (author) trustworthiness, operator (author) expertise, con-tent trustworthiness, content expertise, design trustworthiness, and design expertise—to develop an information platform type-specific framework of in-formation credibility. Results show that existing criteria used in the literature have focused primarily on content-related attributes (eg, evidence-based, structural completeness, and semantic clarity and comprehensive-ness), but less on operator (author)-related attributes (eg, credentials) or de-sign features (eg, interactive design, appropriateness of design, ease of use). Implications of the findings and future research directions are discussed.},
   html={https://www.ideals.illinois.edu/items/123089},
   pdf={2022-iConf-Abstract.pdf},
-  poster={2022-iConf-poster.pdf},
+  poster={2022-iConf-Poster.pdf},
   video={https://drive.google.com/file/d/1eEhqiOi3d_I32uTkx8DWrYtmA_uJ6jIN/view?usp=drive_link}
 }
 
@@ -317,37 +317,53 @@
 @article{tulu2017framework,
   title={A framework to design mHealth apps for supporting self-management of chronic disease},
   author={Tulu, Bengisu and Choi, Wonchan and Zheng, Hua and Franklin, Patricia},
-  booktitle={2017 Annual Research Meeting},
+  journal={2017 AcademyHealth Annual Research Meeting},
   year={2017},
-  organization={AcademyHealth}
+  organization={AcademyHealth},
+  abstract={Research Objective: We present a framework that guides the design of mobile health applications (mHealth apps) that support patients’ self-management of chronic health conditions and symptoms. Study Design: To assess the state of research and market place in utilizing mHealth technology for managing osteoarthritis (OA), a common chronic disease that causes considerable burden in terms of patients’ quality of life and costs for medical treatments, we conducted a systematic review on the literature and a survey of online app stores. Specifically, we conducted in-depth review of 25 articles that mentioned both mHealth technologies and OA management; we also analyzed 23 relevant apps for OA management available in the market place (e.g., Google Play). Population Studied: Literature and mobile apps for OA management Principal Findings: Based on our literature and app analyses, we suggest that three modules should be implemented in an app for any type of chronic disease including OA, namely (a) Self-Management, (b) Decision Support, and (c) Shared Decision-Making. The Self-Management module provides patients with the ability to quantify and log their disease progress and be better informed about the symptoms and available treatment options. OA patients, for example, can record pain levels on a regular basis using this module. The patient-reported data then should be used to generate useful feedback for patients. In addition, the app should provide educational content to improve patients’ understanding of their conditions in general and address potential questions patients might have regarding their symptoms and treatment options. The Decision Support module is the backend of the app where the expert knowledge and computational power should come into play to suggest evidence-based, data-driven treatment options for patients. This module should use patient-reported data fed by the Self-Management module of the app and patient-centered research outcomes reported in the literature to assess patients’ status from the medical treatment perspective. Furthermore, this data can be used to assess patients’ readiness for more advanced treatment options based on clinical evidence. Lastly, the Shared Decision-Making module should enable patients and clinicians to share data collected/generated using the Self-Management and Decision Support modules and to choose the ideal treatment together. To facilitate the shared decision-making process, the app should visualize patients’ progress in the disease management (e.g., trends of symptoms) as well as clinical assessment indices over a period of time. The app should present these results in detailed and summary forms targeting the needs of two user types (i.e., patients and clinicians). The app, therefore, can enable the patients and the clinicians to be in the same page in the supposedly long-term process of chronic disease treatment and help them reach a health care decision based on mutual agreement. Conclusions:  The three modules described in the framework can work together to support patients’ self-management of chronic health conditions and symptoms. Implications for Policy or Practice: We believe this framework can help designers develop better mobile health apps that support patients’ self-management and informed shared decision-making in the treatment process with their clinicians.},
+  url={https://academyhealth.confex.com/academyhealth/2017arm/meetingapp.cgi/Paper/18194},
+  poster={2017-AH-Poster.pdf}
 }
 
 @article{choi2017effects,
   title={Effects of user interface design and task complexity level on user experience in an mHealth application},
   author={Choi, Wonchan and Tulu, Bengisu},
-  year={2017}
+  journal={AMCIS 2017 Proceedings},
+  year={2017},
+  html={https://aisel.aisnet.org/amcis2017/Healthcare/Presentations/43/},
+  abstract={User interface (UI) is a crucial component of any application, including mHealth apps, as UI directly affects the user–app interaction, which then determines the concrete user experience with the app. This paper presents the results of an experimental study that examines the effects of data entry UI types and task complexity on user experience within the context of a mobile app. We used a 2 (touch technique: tap vs. slide) X 2 (target direction: vertical vs. horizontal) X 2 (task complexity: simple vs. complex) design. Our findings indicate that UI design in terms of touch technique and target direction, as well as task complexity have a significant impact on the task completion time. As for error rate, however, we did not find any significant differences by UI design or task complexity level.},
+  poster={2017-AMCIS-Poster.pdf},
+  slides={2017-AMCIS-Slides.pdf}  
 }
 
 @article{choi2017effective,
   title={Effective use of user interface and user experience in an mHealth application},
   author={Choi, Wonchan and Tulu, Bengisu},
+  journal={Proceedings of the 50th Hawaii International Conference on System Sciences},
   year={2017},
-  doi={https://aisel.aisnet.org/hicss-50/hc/user_experience_in_health_it/3/},
+  html={https://scholarspace.manoa.hawaii.edu/items/75763010-34cc-4cf1-9c5d-eff1447bdd3b},
   abstract={The effect of user interface (UI) design decisions on system usability has been discussed in information system literature. These discussions evolved into investigating the effectiveness of UI and how it affects a system user’s performance, as well as his or her perception of the system as a whole. This paper investigates the role of UI design on facilitating effective use in the context of mobile applications. Based on the Effective Use Theory, we test four different UIs developed for frequent data input tasks in a mobile platform using a controlled experiment and a follow-up survey. Our findings indicate that UI design in terms of touch technique (tap vs. slide) and target direction (vertical vs. horizontal) has a significant impact on the task completion time, as well as the app UIs’ perceived usability and likability. We discuss both theoretical and empirical implications of the results and suggest future research directions.},
   pdf={2017-HICSS-Paper.pdf},
   slides={2017-HICSS-Slides.pdf}
 }
 
-@article{zheng2017using,
-  title={Using mHealth App to Support TKR Decision Making for Knee Arthritis Patients},
+@article{zheng2016using,
+  title={Using mHealth app to support TKR decision making for knee arthritis patients},
   author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia D},
-  year={2017}
+  journal={Concordium 2016},
+  year={2016},
+  abstract={Introduction: Arthritis of the knee is the most common physical disability in US adults. For advanced knee arthritis patients, total knee replacement (TKR) is a surgical intervention that can effectively eliminate pain and improve physical function. Before choosing TKR, patients and clinicians must consider the risks and benefits of TKR and determine if the likely outcomes will meet the patient’s individual goals. Patient-reported outcome (PRO) measures have been widely used in orthopedic clinical research to summarize the patient's arthritis pain severity and functional limitations before and after TKR. A national research registry, Function and Outcomes Research for Comparative Effectiveness in Total Joint Replacement (FORCE-TJR), successfully collected PRO measures from 13,000 primary TKR patients of over 150 surgeons in 28 states and disseminated aggregate comparative outcomes to participating hospitals and surgeons. To translate these outcomes to patients, an AHRQ-funded mHealth study is designing and testing a mobile app translating FORCE-TJR outcome data to provide knee arthritis patients with information and education about timing, value, and individualized likely outcomes from TKR to support patient and clinician shared treatment decision making. Methods: We developed an Android-based smart phone app for knee arthritis patients to assess arthritis symptoms and individual readiness for TKR surgery. Tailored, patient-centered outcome prediction models from the FORCE-TJR cohort provide refined outcome estimates. Patient focus groups and clinician interviews were conducted to obtain patients’ and clinicians’ feedback on their preferred graphic displays of data, questions, and evaluation results. Laboratory and field usability testing are beginning to finalize the app content and format. Findings: Three patient focus groups were conducted between December 2015 and February 2016. The preliminary findings from the focus groups revealed that the patients prefer easy tap user interfaces to multi-tap or slider methods, vertical question layout to horizontal orientation, and both numbered and worded rating scales to only using words. With input, a tailored report was designed with individual patient factors and trended pain and function history over time, based on FORCE-TJR data. Final clinician interviews are being conducted to evaluate the app’s shared report. Conclusions: An mHealth app was designed to disseminate tailored patient-centric outcome predictions developed from a contemporary national TKR cohort with refined usability and display features to meet the needs of knee arthritis patients faced with surgical treatment decisions. Dissemination of patient-reported symptoms and outcomes from recent TKR patients will support patient decision engagement and shared decision making for future knee arthritis patients. Lessons Learned: User input can inform the design and implementation of mHealth technology to deliver tailored knowledge to patients through a user-defined, patient-centered smart phone app. The tool will support future knee arthritis patient decisions regarding the need for, and timing of TKR surgery.},
+  html={https://academyhealth.confex.com/academyhealth/2016concordium/meetingapp.cgi/Paper/13102}
 }
 
 @article{choi2016developing,
-  title={Developing an mHealth Application for Osteoarthritis Patients},
+  title={Developing an mHealth application for osteoarthritis patients},
   author={Choi, Wonchan and Tulu, Bengisu and Zheng, Hua and Franklin, Patricia},
-  year={2016}
+  journal={AMCIS 2016 Proceedings},
+  year={2016},
+  abstract={Given the prevalence of osteoarthritis (OA) and the potential usefulness of mHealth technologies for OA self-management and treatment decisions, the authors attempt to develop an mHealth App that is particularly focused on OA. As part of a larger project, the authors have conducted two focus groups exploring OA patients’ perceptions of pain data input user interfaces (UIs), pain scale, and requirements for the mHealth App on OA. The preliminary findings from the focus groups revealed that the patients preferred the Tap-Horizontal UI the most, while the Tap-Tap-Tap type of UIs were always rated lower than other types of UIs in the study. In regard to the pain scale, most participants highlighted that including numeric rating scales along with the corresponding wording would help them gauge their pain levels more accurately. Lastly, the focus group discussions and free sketch session generated useful ideas around the functional requirements and design insights.},
+  html={https://aisel.aisnet.org/amcis2016/Health/Presentations/25/},
+  poster={2016-AMCIS-ERF-Poster.pdf}
 }
 
 @article{yang2016publication,
@@ -357,7 +373,10 @@
   volume={21},
   number={2},
   pages={67--81},
-  year={2016}
+  year={2016},
+  abstract={},
+  doi={https://doi.org/10.22452/mjlis.vol21no2.5},
+  pdf={2016-MJLIS.pdf}
 }
 
 @article{yang2015looking,
@@ -368,7 +387,10 @@
   number={4},
   pages={241--264},
   year={2015},
-  publisher={Korean Society For Library And Information Science}
+  publisher={Korean Society For Library And Information Science},
+  abstract={Bibliometric analysis for research performance evaluation can generate erroneous assessments for various reasons. Application of the same evaluation metric to different domains, for instance, can produce unfair evaluation results, while analysis based on incomplete data can lead to incorrect conclusions. This study examines bibliometric data of library and information science (LIS) research in Korea to investigate whether research performance should be evaluated in a uniform manner in multi-disciplinary fields such as LIS and how data incompleteness can affect the bibliometric assessment outcomes. The initial analysis of our study data, which consisted of 4,350 citations to 1,986 domestic papers published between 2001 and 2010 by 163 LIS faculty members in Korea, showed an anomalous citation pattern caused by data incompleteness, which was addressed via data projection based on past citation trends. The subsequent analysis of augmented study data revealed ample evidence of bibliometric pattern differences across subject areas. In addition to highlighting the need for a subject-specific assessment of research performance, the study demonstrated the importance of rigorous analysis and careful interpretation of bibliometric data by identifying and compensating for deficiencies in the data source, examining per capita as well as overall statistics, and considering various facets of research in order to interpret what the numbers reflect rather than merely taking them at face value as quantitative measures of research performance.},
+  doi={https://doi.org/10.4275/KSLIS.2015.49.4.241},
+  pdf={2015-JKSLIS.pdf}
 }
 
 @article{choi2015new-a,
